--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -4,3 +4,25 @@
 @import "../node_modules/bootstrap/scss/type";
 @import "../node_modules/bootstrap/scss/images";
 @import "../node_modules/bootstrap/scss/grid";
+
+
+.products-container{
+    @include make-container();
+    width: 800px;
+}
+
+.row{
+    @include make-row();
+}
+
+.main-product-wrapper{
+
+    @include make-col-ready();
+
+  @include media-breakpoint-up(sm) {
+    @include make-col(1);
+  }
+  @include media-breakpoint-up(lg) {
+    @include make-col(3);
+  }
+}
