--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -7,17 +7,17 @@
 
 
 .products-container{
-    @include make-container();
+    @include make-container;
     width: 800px;
 }
 
 .row{
-    @include make-row();
+    @include make-row;
 }
 
 .main-product-wrapper{
 
-    @include make-col-ready();
+    @include make-col-ready;
 
   @include media-breakpoint-up(sm) {
     @include make-col(1);
