--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,3 +1,5 @@
+@import '../node_modules/bootstrap/scss/bootstrap';
+
 @import "../node_modules/bootstrap/scss/functions";
 @import "../node_modules/bootstrap/scss/variables";
 @import "../node_modules/bootstrap/scss/mixins";
@@ -7,17 +9,17 @@
 
 
 .products-container{
-    @include make-container;
+    @include make-container();
     width: 800px;
 }
 
 .row{
-    @include make-row;
+    @include make-row();
 }
 
 .main-product-wrapper{
 
-    @include make-col-ready;
+    @include make-col-ready();
 
   @include media-breakpoint-up(sm) {
     @include make-col(1);
