--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -17,18 +17,20 @@
     width: 800px;
 }
 
-.row{
-    @include make-row();
+.product-row {
+  @include make-row();
 }
 
-.main-product-wrapper{
-
-    @include make-col-ready();
-
+.productItem{
+  @include make-col-ready();
+  width: 80%;
+  @include media-breakpoint-up(xs) {
+    @include make-col(1, 1);
+  }
   @include media-breakpoint-up(sm) {
-    @include make-col(1);
+    @include make-col(1, 3);
   }
   @include media-breakpoint-up(lg) {
-    @include make-col(3);
+    @include make-col(1, 3);
   }
 }
