--- a/scss/styles.css
+++ b/scss/styles.css
@@ -13115,14 +13115,14 @@ textarea.form-control-lg {
   padding-right: calc(var(--bs-gutter-x) * 0.5);
   padding-left: calc(var(--bs-gutter-x) * 0.5);
   margin-top: var(--bs-gutter-y);
-  width: 100%;
+  width: 80%;
   flex: 0 0 auto;
   width: 100%;
 }
 @media (min-width: 480px) {
   .productItem {
     flex: 0 0 auto;
-    width: 100%;
+    width: 33.33333333%;
   }
 }
 @media (min-width: 980px) {
