--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,5 +1,4 @@
 @import '../node_modules/bootstrap/scss/bootstrap';
-
 @import "../node_modules/bootstrap/scss/functions";
 @import "../node_modules/bootstrap/scss/variables";
 @import "../node_modules/bootstrap/scss/mixins";
@@ -14,23 +13,70 @@
 
 .products-container{
     @include make-container();
-    width: 800px;
+    // width: 800px;
 }
 
 .product-row {
   @include make-row();
 }
 
-.productItem{
+.card{
   @include make-col-ready();
-  width: 80%;
+  width: 100%;
   @include media-breakpoint-up(xs) {
     @include make-col(1, 1);
+  width: 20rem;
   }
   @include media-breakpoint-up(sm) {
-    @include make-col(1, 3);
+    @include make-col(1, 1);
+    width: 18rem;
   }
   @include media-breakpoint-up(lg) {
     @include make-col(1, 3);
   }
+  margin: 10px;
+  padding: 0;
+}
+
+.card-img-top{
+  margin-top:.5rem;
+}
+
+p{
+  margin: 1px;
+}
+.card-title-wrapper{
+  height: 20px;
+  -webkit-mask-image: linear-gradient(180deg, #000 60%, transparent);
+}
+
+.card-title{
+  font-size: .7rem;
+  margin-bottom: .1rem;
+  font-style: bold;
+}
+
+.card-text{
+  max-width: 90%;
+    height: 20%;
+    -webkit-mask-image: linear-gradient(180deg, #000 60%, transparent);
+    font-size: .5rem;
+}
+
+
+.list-group-item,
+.price{
+  font-size: .7rem;
+}
+
+
+.card-footer{
+width: 100%;
+height: 20px;
+background-color: $teal;
+}
+
+.btn-cart{
+font-size: .7rem;
+padding: 0;
 }
