--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,82 +1,106 @@
-@import '../node_modules/bootstrap/scss/bootstrap';
+@import "../node_modules/bootstrap/scss/bootstrap";
 @import "../node_modules/bootstrap/scss/functions";
 @import "../node_modules/bootstrap/scss/variables";
 @import "../node_modules/bootstrap/scss/mixins";
 @import "../node_modules/bootstrap/scss/type";
 @import "../node_modules/bootstrap/scss/images";
 @import "../node_modules/bootstrap/scss/grid";
+@import "../node_modules/bootstrap/scss/card";
 
-*{
-  border: 1px purple solid;
+
+
+$primary-color: #74EBD5;
+$secondary-color: #9FACE6;
+
+body,
+.navbar {
+  background-color: $primary-color;
+  background-image: linear-gradient(90deg, $primary-color 0%, $secondary-color 100%);
+  font: $white;
 }
 
-
-.products-container{
+  // ~~~~~~~~~~~~~~~~~~~~~~ Product Grid ~~~~~~~~~~~~~~~~~~~~~~  
+  .products-container {
     @include make-container();
     // width: 800px;
-}
-
-.product-row {
-  @include make-row();
-}
-
-.card{
-  @include make-col-ready();
-  width: 100%;
-  @include media-breakpoint-up(xs) {
-    @include make-col(1, 1);
-  width: 20rem;
   }
-  @include media-breakpoint-up(sm) {
-    @include make-col(1, 1);
-    width: 18rem;
+  
+  .product-row {
+    @include make-row();
   }
-  @include media-breakpoint-up(lg) {
-    @include make-col(1, 3);
+  
+  .card {
+    @include make-col-ready();
+    width: 100%;
+    @include media-breakpoint-up(xs) {
+      @include make-col(1, 1);
+      width: 20rem;
+    }
+    @include media-breakpoint-up(sm) {
+      @include make-col(1, 1);
+      width: 18rem;
+    }
+    @include media-breakpoint-up(lg) {
+      @include make-col(1, 3);
+    }
+    margin: 10px;
+    padding: 0;
+  
   }
-  margin: 10px;
-  padding: 0;
+  
+  
+
+// ~~~~~~~~~~~~~~~~~~~~~~ Images ~~~~~~~~~~~~~~~~~~~~~~  
+.nav-logo{
+  mix-blend-mode: multiply;
 }
 
-.card-img-top{
-  margin-top:.5rem;
+.card-img-top {
+  margin-top: 0.5rem;
 }
 
-p{
+// ~~~~~~~~~~~~~~~~~~~~~~ Navigation ~~~~~~~~~~~~~~~~~~~~~~  
+
+.btn-cart {
+font-size: 0.7rem;
+padding: 0;
+}
+
+// ~~~~~~~~~~~~~~~~~~~~~~ Text ~~~~~~~~~~~~~~~~~~~~~~  
+
+p {
   margin: 1px;
 }
-.card-title-wrapper{
+.card-title-wrapper {
   height: 20px;
   -webkit-mask-image: linear-gradient(180deg, #000 60%, transparent);
 }
 
-.card-title{
-  font-size: .7rem;
-  margin-bottom: .1rem;
+.card-title {
+  font-size: 0.7rem;
+  margin-bottom: 0.1rem;
   font-style: bold;
 }
 
-.card-text{
+.card-text {
   max-width: 90%;
-    height: 20%;
-    -webkit-mask-image: linear-gradient(180deg, #000 60%, transparent);
-    font-size: .5rem;
+  -webkit-mask-image: linear-gradient(180deg, #000 60%, transparent);
+  font-size: 0.5rem;
 }
 
-
-.list-group-item,
-.price{
-  font-size: .7rem;
+.p-description {
+  height: 70px;
+  width: 90%;
 }
 
-
-.card-footer{
-width: 100%;
-height: 20px;
-background-color: $teal;
+.price {
+  font-size: 0.7rem;
+  height: 20px;
+  
 }
 
-.btn-cart{
-font-size: .7rem;
-padding: 0;
+.card-footer {
+  width: 100%;
+  background-color: $teal;
+
 }
