--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -47,8 +47,9 @@ body,
     padding: 0;
   
   }
-  
-  
+
+
+
 
 // ~~~~~~~~~~~~~~~~~~~~~~ Images ~~~~~~~~~~~~~~~~~~~~~~  
 .nav-logo{
@@ -57,6 +58,7 @@ body,
 
 .card-img-top {
   margin-top: 0.5rem;
+  mix-blend-mode: multiply;
 }
 
 // ~~~~~~~~~~~~~~~~~~~~~~ Navigation ~~~~~~~~~~~~~~~~~~~~~~  
@@ -66,36 +68,68 @@ font-size: 0.7rem;
 padding: 0;
 }
 
+.btn-grad {
+  background-image: linear-gradient(to right, #4CB8C4 0%, #3CD3AD 51%, #4CB8C4 100%);
+  background-position: left center;
+  background-size: 200% auto;
+  color: #fff;
+  text-align: center;
+  text-transform: uppercase;
+  transition: .5s;
+  margin: 10px;
+  padding: 15px 45px;
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+  display: block;
+  text-decoration: none;
+}
+
+.btn-grad:hover {
+  background-position: right center;
+}
+
+// ~~~~~~~~~~~~~~~~~~~~~~ Products ~~~~~~~~~~~~~~~~~~~~~~  
+
+  
+.card{
+  background-color: rgba(255, 255, 255, 0.5)
+}
+
 // ~~~~~~~~~~~~~~~~~~~~~~ Text ~~~~~~~~~~~~~~~~~~~~~~  
 
 p {
   margin: 1px;
 }
 .card-title-wrapper {
-  height: 20px;
-  -webkit-mask-image: linear-gradient(180deg, #000 60%, transparent);
+  height: 40px;
+  -webkit-mask-image: linear-gradient(180deg, #000 80%, transparent);
+  margin-top: .1rem;
 }
 
 .card-title {
   font-size: 0.7rem;
-  margin-bottom: 0.1rem;
-  font-style: bold;
+  padding-top: .1rem;
+  padding-bottom: .1rem;
+  font-weight: 900;
+}
+.card-description-wrapper{
+  max-width: 90%;
+  height: 70px;
+  -webkit-mask-image: linear-gradient(180deg, #000 60%, transparent);
 }
 
 .card-text {
-  max-width: 90%;
-  -webkit-mask-image: linear-gradient(180deg, #000 60%, transparent);
   font-size: 0.5rem;
 }
 
 .p-description {
-  height: 70px;
   width: 90%;
 }
 
 .price {
   font-size: 0.7rem;
   height: 20px;
+  font-weight: 700;
   
 }
 
