--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -6,6 +6,8 @@
 @import "../node_modules/bootstrap/scss/images";
 @import "../node_modules/bootstrap/scss/grid";
 @import "../node_modules/bootstrap/scss/card";
+@import "../node_modules/bootstrap/scss/modal";
+
 
 
 
@@ -34,18 +36,24 @@ body,
   
   .card {
     @include make-col-ready();
+  width: 100%;
+
+  @include media-breakpoint-up(xs) {
+    @include make-col(1, 1);
     width: 100%;
-    @include media-breakpoint-up(xs) {
-      @include make-col(1, 1);
-      width: 20rem;
-    }
-    @include media-breakpoint-up(sm) {
-      @include make-col(1, 1);
-      width: 18rem;
-    }
-    @include media-breakpoint-up(lg) {
-      @include make-col(1, 3);
-    }
+  }
+
+  @include media-breakpoint-up(sm) {
+    @include make-col(1, 1);
+    width: 100%;
+  }
+
+  @include media-breakpoint-up(lg) {
+    @include make-col(1, 3);
+    width: auto;
+    margin: 66px;
+  }
+
     margin: 10px;
     padding: 0 !important;
   
@@ -109,8 +117,30 @@ padding: 0;
 }
 
 .btn-grad:hover,
-.btn-grad2:hover {
+.btn-grad2:hover,
+.btn-sort-name:hover,
+.btn-filter-type:hover,
+.btn-sort-stars:hover,
+.btn-purchase:hover {
   background-position: right center;
+}
+
+
+
+.btn-sort-name,
+.btn-sort-stars{
+  width: 100px;
+  height: 37px;
+  margin-right: 0px;
+  font-size: .5rem;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding: 0;
+}
+
+
+.btn-purchase{
+  font-size: .8rem;
 }
 
 .delete-item{
@@ -118,24 +148,6 @@ padding: 0;
   height: 12px;
   width: 5px;
 }
-
-.btn-sort-name,
-.btn-filter-type,
-.btn-sort-stars{
-  width: 30px;
-  height: 37px;
-  font-size: .5rem;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding: 0;
-}
-
-.btn-sort-name,
-.btn-sort-stars{
-  width: 100px;
-}
-
-
 // ~~~~~~~~~~~~~~~~~~~~~~ Products ~~~~~~~~~~~~~~~~~~~~~~  
 
   
@@ -186,3 +198,15 @@ p {
   background-color: $teal;
 }
 
+/* ~~~~~~~~~~~medium device~~~~~~~~~~~~~~~ */
+
+@media screen and (max-width: 768px) {
+ 
+}
+
+
+/* ~~~~~~~~~~~mobile device~~~~~~~~~~~~~~~ */
+
+@media screen and (max-width: 480px) {
+ 
+}
