--- a/scss/styles.css
+++ b/scss/styles.css
@@ -13753,5 +13753,21 @@ p {
 
 /* ~~~~~~~~~~~medium device~~~~~~~~~~~~~~~ */
 /* ~~~~~~~~~~~mobile device~~~~~~~~~~~~~~~ */
+@media screen and (max-width: 576px) {
+  .pg-title-wrapper {
+    display: flex;
+    flex-direction: column;
+    text-align: center !important;
+  }
+  .input-group {
+    justify-content: center !important;
+  }
+  .cart-items-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
 
 /*# sourceMappingURL=styles.css.map */
