--- a/scss/styles.css
+++ b/scss/styles.css
@@ -13564,8 +13564,8 @@ textarea.form-control-lg {
 }
 body,
 .navbar {
-  background-color: #74EBD5;
-  background-image: linear-gradient(90deg, #74EBD5 0%, #9FACE6 100%);
+  background-color: #74ebd5;
+  background-image: linear-gradient(90deg, #74ebd5 0%, #9face6 100%);
   font: #fff;
 }
 
@@ -13643,6 +13643,10 @@ body,
   opacity: 0.5;
 }
 
+.navbar-toggler {
+  margin: 4% !important;
+}
+
 .btn-cart {
   font-size: 0.7rem;
   padding: 0;
@@ -13650,7 +13654,7 @@ body,
 
 .btn-grad,
 .btn-grad2 {
-  background-image: linear-gradient(to right, #4CB8C4 0%, #3CD3AD 51%, #4CB8C4 100%);
+  background-image: linear-gradient(to right, #4cb8c4 0%, #3cd3ad 51%, #4cb8c4 100%);
   background-position: left center;
   background-size: 200% auto;
   color: #fff;
@@ -13702,7 +13706,7 @@ body,
 .delete-item {
   color: #dc3545;
   height: 12px;
-  width: 5px;
+  font-size: 25px;
 }
 
 .card {
@@ -13711,6 +13715,11 @@ body,
 
 p {
   margin: 1px;
+}
+
+.hero-title,
+.hero-sub-title {
+  text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
 }
 
 .card-title-wrapper {
@@ -13754,6 +13763,12 @@ p {
 /* ~~~~~~~~~~~medium device~~~~~~~~~~~~~~~ */
 /* ~~~~~~~~~~~mobile device~~~~~~~~~~~~~~~ */
 @media screen and (max-width: 576px) {
+  .hero-sub-title {
+    font-size: 10px;
+  }
+  .nav-link {
+    margin-left: 2px;
+  }
   .pg-title-wrapper {
     display: flex;
     flex-direction: column;
@@ -13762,11 +13777,24 @@ p {
   .input-group {
     justify-content: center !important;
   }
-  .cart-items-container {
+  .cart-items-container,
+  .table {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-size: 0.5rem;
+  }
+  .delete-item {
+    font-size: 15px;
+  }
+  .dropdown-toggle {
+    height: 30px;
+    width: 40px;
+    font-size: 10px;
+  }
+  .table {
+    margin-bottom: 2px !important;
   }
 }
 
