Feat: format pricing total item price cart

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -70,9 +70,12 @@ body,
   mix-blend-mode: multiply;
 }
 
-.submit-image {
+.submit-image,
+.empty-cart-image {
   opacity: 0.5;
 }
+
+
 
 // ~~~~~~~~~~~~~~~~~~~~~~ Navigation ~~~~~~~~~~~~~~~~~~~~~~
 
@@ -211,7 +214,7 @@ p {
   .nav-link{
     margin-left: 2px;
   }
-  
+
   .pg-title-wrapper {
     display: flex;
     flex-direction: column;
