--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -142,6 +142,13 @@ body,
   height: 12px;
   font-size: 25px;
 }
+
+.increase-itm-btn,
+  .decrease-itm-btn {
+    background-color: transparent !important;
+    border: none;
+  }
+
 // ~~~~~~~~~~~~~~~~~~~~~~ Products ~~~~~~~~~~~~~~~~~~~~~~
 
 .card {
@@ -237,8 +244,6 @@ p {
   .increase-itm-btn,
   .decrease-itm-btn {
     font-size: 13px;
-    background-color: transparent !important;
-    border: none;
   }
 
   .dropdown-toggle {
