--- a/scss/styles.css
+++ b/scss/styles.css
@@ -13710,6 +13710,12 @@ body,
   font-size: 25px;
 }
 
+.increase-itm-btn,
+.decrease-itm-btn {
+  background-color: transparent !important;
+  border: none;
+}
+
 .card {
   background-color: rgba(255, 255, 255, 0.5);
 }
@@ -13791,8 +13797,7 @@ p {
   }
   .increase-itm-btn,
   .decrease-itm-btn {
-    font-size: 15px;
-    background: transparent !important;
+    font-size: 13px;
   }
   .dropdown-toggle {
     height: 30px;
@@ -13801,6 +13806,7 @@ p {
   }
   .table {
     margin-bottom: 2px !important;
+    width: auto;
   }
 }
 
