Feat: format empty cart message

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -142,6 +142,15 @@ body,
   height: 12px;
   font-size: 25px;
 }
+.empty-cart-btn-wrapper{
+  height: 100%;
+  width: 100%;
+}
+
+
+// .empty-cart-explore-btn{
+ 
+// }
 
 .increase-itm-btn,
   .decrease-itm-btn {
@@ -162,7 +171,8 @@ p {
 }
 
 .hero-title,
-.hero-sub-title {
+.hero-sub-title,
+.cart-empty-msg {
   text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
 }
 
@@ -237,6 +247,18 @@ p {
     align-items: center;
     font-size: 0.5rem;
   }
+
+  .table {
+    margin-bottom: 2px !important;
+    width: auto;
+  }
+
+  .cart-empty-msg{
+   font-size: medium;
+
+  }
+
+
   .delete-item {
     font-size: 15px;
   }
@@ -252,8 +274,5 @@ p {
     font-size: 10px;
   }
 
-  .table {
-    margin-bottom: 2px !important;
-    width: auto;
-  }
+ 
 }
