--- a/scss/styles.css
+++ b/scss/styles.css
@@ -13710,6 +13710,11 @@ body,
   font-size: 25px;
 }
 
+.empty-cart-btn-wrapper {
+  height: 100%;
+  width: 100%;
+}
+
 .increase-itm-btn,
 .decrease-itm-btn {
   background-color: transparent !important;
@@ -13725,7 +13730,8 @@ p {
 }
 
 .hero-title,
-.hero-sub-title {
+.hero-sub-title,
+.cart-empty-msg {
   text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
 }
 
@@ -13792,6 +13798,13 @@ p {
     align-items: center;
     font-size: 0.5rem;
   }
+  .table {
+    margin-bottom: 2px !important;
+    width: auto;
+  }
+  .cart-empty-msg {
+    font-size: medium;
+  }
   .delete-item {
     font-size: 15px;
   }
@@ -13803,10 +13816,6 @@ p {
     height: 30px;
     width: 40px;
     font-size: 10px;
-  }
-  .table {
-    margin-bottom: 2px !important;
-    width: auto;
   }
 }
 
