--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -144,7 +144,7 @@ body,
 }
 
 .empty-cart-explore-btn {
-  margin-top: -70%;
+  margin-top: -60%;
   z-index: 1;
 }
 
@@ -170,6 +170,10 @@ p {
 .hero-sub-title,
 .cart-empty-msg {
   text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
+}
+
+.cart-empty-msg{
+  max-width: 70%;
 }
 
 .card-title-wrapper {
@@ -251,6 +255,10 @@ p {
 
   .cart-empty-msg {
     font-size: medium;
+  }
+
+  .empty-cart-explore-btn {
+    margin-top: -30%;
   }
 
   .delete-item {
