--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -59,6 +59,42 @@ body,
 }
 
 // ~~~~~~~~~~~~~~~~~~~~~~ Images ~~~~~~~~~~~~~~~~~~~~~~
+
+
+#loadingDiv {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(90deg, $primary-color 0%, $secondary-color 100%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+
+.loader {
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  border: none;
+  animation: loaderAnimation 1s infinite ease-in-out;
+}
+
+@keyframes loaderAnimation {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.5);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+
 .nav-logo,
 .nav-logo2 {
   mix-blend-mode: multiply;
