--- a/scss/styles.css
+++ b/scss/styles.css
@@ -13628,6 +13628,38 @@ body,
   padding: 0.1rem;
 }
 
+#loadingDiv {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(90deg, #74ebd5 0%, #9face6 100%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+
+.loader {
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  border: none;
+  animation: loaderAnimation 1s infinite ease-in-out;
+}
+
+@keyframes loaderAnimation {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.5);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
 .nav-logo,
 .nav-logo2 {
   mix-blend-mode: multiply;
